<resources>
    <string name="facebook_app_id">565935617108305</string>
    <string name="fb_login_protocol_scheme">fb565935617108305</string>

    <string name="app_name">anfy</string>
    <string name="dummy_setting">بلا بلا</string>
    <string name="anfy">انفي</string>
    <string name="settings_terms">الشروط والاحكام</string>
    <string name="settings_privacy_agreement">اتفاقية الخصوصية</string>
    <string name="settings_contact_us">اتصل بنا</string>
    <string name="home">الرئيسية</string>
    <string name="about_us">من نحن</string>
    <string name="consultations">الاستشارات</string>
    <string name="alarm">المنبه</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="terms_conditions">الشروط والاحكام</string>
    <string name="lorem">هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن الغالبية تم تعديلها بشكل ما عبر إدخال بعض النوادر أو الكلمات العشوائية إلى النص.
        إن كنت تريد أن تستخدم نص لوريم إيبسوم ما، عليك أن تتحقق أولاً أن ليس هناك أي كلمات أو عبارات محرجة أو غير لائقة مخبأة في هذا النص. بينما تعمل جميع مولّدات نصوص لوريم إيبسوم على الإنترنت على إعادة تكرار مقاطع من نص لوريم إيبسوم نفسه عدة مرات بما تتطلبه الحاجة،
        يقوم مولّدنا هذا باستخدام كلمات من قاموس يحوي على أكثر من 200 كلمة لا تينية، مضاف إليها مجموعة من الجمل النموذجية، لتكوين نص لوريم إيبسوم ذو شكل منطقي قريب إلى النص الحقيقي. وبالتالي يكون النص الناتح خالي من التكرار، أو أي كلمات أو عبارات غير لائقة أو ما شابه. وهذا ما يجعله أول مولّد نص لوريم إيبسوم حقيقي على الإنترنت.
        هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك يتم استخدام طريقة لوريم إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف عوضاً عن استخدام "هنا يوجد محتوى نصي، هنا يوجد محتوى نصي" فتجعلها تبدو (أي الأحرف) وكأنها نص مقروء. العديد من برامح النشر المكتبي وبرامح تحرير صفحات الويب تستخدم لوريم إيبسوم بشكل إفتراضي كنموذج عن النص، وإذا قمت بإدخال "lorem ipsum" في أي محرك بحث ستظهر العديد من المواقع الحديثة العهد في نتائج البحث. على مدى السنين ظهرت نسخ جديدة ومختلفة من نص لوريم إيبسوم، أحياناً عن طريق الصدفة، وأحياناً عن عمد كإدخال بعض العبارات الفكاهية إليها.
</string>
    <string name="privacy_agreement">اتفاقية الخصوصية</string>
    <string name="management">ادارة التطبيق</string>
    <string name="save">حفظ</string>
    <string name="cancel">الغاء</string>
    <string name="profile">الملف الشخصي</string>
    <string name="notifications">الاشعارات</string>
    <string name="doctor_info">معلومات الطبيب</string>
    <string name="doctor_degrees">الشهادات</string>
    <string name="specialization">التخصص</string>
    <string name="doctor_details">تفاصيل الطبيب</string>
    <string name="country">الدولة</string>
    <string name="city">المدينة</string>
    <string name="phone">الهاتف</string>
    <string name="nav_home">الرئيسية</string>
    <string name="nav_about">من نحن</string>
    <string name="nav_doctors">الاطباء</string>
    <string name="nav_request_consult">طلب استشارة</string>
    <string name="nav_alarm">المنبه</string>
    <string name="nav_noti">الاشعارات</string>
    <string name="nav_profile">الملف الشخصي</string>
    <string name="nav_fav">المفضلة</string>
    <string name="nav_settings">الاعدادات</string>
    <string name="text_or">او</string>
    <string name="login_social_msg">تسجيل الدخول بواسطة مواقع التواصل الاجتماعي</string>
    <string name="ksa_code">+960</string>
    <string name="enter_phone">ادخل رقم الهاتف</string>
    <string name="continue_no_register">تصفح بدون تسجيل</string>
    <string name="you_agree">بأنشاء حساب او تسجيل الدخول انت توافق على </string>
    <string name="next">التالي</string>
    <string name="enter_phone_to_login_register">ادخل رقم الهاتف الخاص بك</string>
    <string name="enter_ver">ادخل رقم التحقيق</string>
    <string name="ver_sent">تم ارسال رسالة SMS الى الرقم</string>
    <string name="send_again">اعادة ارسال الرمز؟</string>
    <string name="back">رجوع</string>
    <string name="text_size">حجم الخط</string>
    <string name="cat_colon">التصنيف :</string>
    <string name="gender">النوع</string>
    <string name="colon">:</string>
    <string name="male">ذكر</string>
    <string name="female">انثى</string>
    <string name="details">التفاصيل</string>
    <string name="age">العمر</string>
    <string name="years">سنة</string>
    <string name="choose_quantity">تحديد الكمية (عدد الجرعات) التي يتعين اخذها في هذه الساعة</string>
    <string name="set">ضبط</string>
    <string name="write_suggestion">قم بكتابة اقتراحك...</string>
    <string name="send">ارسال</string>
    <string name="send_suggestion">ارسل لنا اقتراحك</string>
    <string name="suggestion"> اقتراح</string>
    <string name="fax">الفاكس</string>
    <string name="email">البريد</string>
    <string name="stay_connected">ابقى على تواصل</string>
    <string name="request_consult">طلب استشارة</string>
    <string name="write_consultation">قم بكتابة تفاصيل استشارتك الطبية...</string>
    <string name="add">اضافة</string>
    <string name="friday">الجمعة</string>
    <string name="thursday">الخميس</string>
    <string name="wednesday">الاربعاء</string>
    <string name="tuesday">الثلاثاء</string>
    <string name="monday">الاثنين</string>
    <string name="sunday">الاحد</string>
    <string name="saturday">السبت</string>
    <string name="no_data">لا يوجد بيانات</string>
    <string name="no_internet">لا يوجد اتصال بشبكة الانترنت</string>
    <string name="login">تسجيل الدخول</string>
    <string name="confirm">تأكيد</string>
    <string name="retry">اعادة المحاولة</string>
    <string name="internet_permission" />
    <string name="our_phone">0123456789</string>
    <string name="related">مواضيع ذات صلة</string>
    <string name="consult_no"> رقم الاستشارة : </string>
    <string name="empty_error">يجب ملئ هذا الحقل</string>
    <string name="consult_sent">تم ارسال استشارتك</string>
    <string name="consult_updated">تم تحديث استشارتك</string>
    <string name="consult_not_sent">خطأ في ارسال الاستشارة</string>
    <string name="sign_in_first_consult">الرجاء تسجيل الدخول لتتمكن من طلب استشارة</string>
    <string name="phone_not_valid">الرجاء ادخال رقم هاتف صحيح</string>
    <string name="select_country">اختر الدولة</string>
    <string name="ver_error">الكود غير صحيح الرجاء اعاد ادخال الكود</string>
    <string name="new_user">مستخدم جديد</string>
    <string name="select_city">اختر المدينة</string>
    <string name="sugg_submit">تم ارسال اقتراحك</string>
    <string name="sign_sugg">الرجاء تسجيل الدخول للتمكن من اضافة اقتراح</string>
    <string name="profile_update">تم تحديث معلوماتك</string>
    <string name="months">شهر</string>
    <string name="days">يوم</string>
    <string name="hours">ساعة</string>
    <string name="mins">دقيقة</string>
    <string name="now">الان</string>
    <string name="confirm_phone">تأكيد رقم الهاتف</string>
    <string name="code_resent">تم اعادة ارسال كود التفعيل</string>
    <string name="search">البحث</string>
    <string name="phone_error">الرجاء ادخال رقم هاتف صحيح</string>
    <string name="email_error">الرجاء ادخال بريد الكتروني صحيح</string>
    <string name="name_error">الرجاء ادخال اسم صحيح</string>
    <string name="our_email">contact@anfy.com</string>
    <string name="our_fax">00000123456789</string>
    <string name="write_msg">اكتب رسالتك....</string>
    <string name="consultation_number">استشارة رقم:</string>
    <string name="dialog_msg_loading">برجاء النتظار</string>
    <string name="edit_img">تعديل الصورة</string>
    <string name="toast_unexpected_error">خطأ</string>
    <string name="toast_cannot_retrieve_cropped_image">غير قادر على اسخراج الصوره</string>
    <string name="splash_text">اقرا..استشر..تصح</string>
    <string name="logo_share_transtion">logo_share</string>
    <string name="delete">حذف</string>
    <string name="edit">تعديل</string>
    <string name="show_details">التفاصيل</string>
    <string name="delete_warning">هل تريد حذف الرسالة</string>
    <string name="havind_reminder">لديك تنبية على : </string>
    <string name="specfic_week_days">ايام محددة من الاسبوع</string>

    <string name="med_name">اسم الدواء</string>
    <string name="schdual">جدولة</string>
    <string name="ever_day">كل يوم</string>
    <string name="starting_day">تاريخ البدء : </string>
    <string name="med_period">مدة العلاج:</string>
    <string name="contonious">مستمر</string>
    <string name="days_count">عدد الايام</string>
    <string name="set_days_count">حدد عدد الايام</string>

    <string name="every_day">كل يوم</string>
    <string name="take">تناول</string>
    <string name="reminder_time">اوقات التذكير</string>
    <string name="about_us_text">طبيق أنفي هو تطبيق متخصص في الأنف والحنجرة لتثقيف المريض عن الأمراض وطريقة علاجها بطريقة سهلة وبسيطة لفهم المرض وكيفة العلاج وأنواع العمليات للمرض عن طريق طرح مقالات لشرح الأمراض وطرق العلاج</string>
    <string name="terms_text">باستخدام تطبيق أنفي فأنت توافق على الالتزام بالشروط والأحكام لهذا التطبيق: يجب عليك الاطلاع على هذه الشروط والأحكام بصفة مستمرة .  كجزء من التزامنا بجعل تطبيق أنفي مكانا ترغب في زيارته باستمرار فإننا نرحب بكافة الآراء على أي من السياسات أو القواعد التي ندرجها. يعمل تطبيق أنفي على توفير المعلومات في الموقع بأكبر دقة ممكنة عن طريق أطباء متخصصين في مجالاتهم.  يتضمن التطبيق معلومات حول بعض الأمراض والعلاجات حيث أن المعلومات والمواد المقدمة في الطبيق مقدمة بأمانة تامة.  عبر استخدامك لتطبيق أنفي فإنك توافق وتقر بأنه قد يقوم التطبيق بعمل أي تحديث أو تعديل الشروط والأحكام في أي وقت .</string>
    <string name="credits">ل المعلومات الموجودة في التطبيق والمتاحة للقراءة هي ملكية فكرية للتطبيق وفريق العمل الذين يعملون فيه ويمكن استخدامها للاستفادة منها.</string>
    <string name="credite_title">الملكية الفكرية</string>
    <string name="privacy_txt">نهتم بخصوصيتك وأمنك بشكل كبير. ويتم جمع بعض البيانات لاستخدامها عن طريق تطبيق أنفي من أجل توفير وتحسين خدماتنا عبر الإنترنت و تعتبر سياسية الخصوصية جزءا من هذه الشروط والأحكام . نقر التزامنا بكافة تشريعات حماية الخصوصية المرعية وقت صدورها فيما يتعلق بأي معلومات شخصية تتعلق بك قمنا نحن بجمعها ولن يتم استخدامها في اي غرض تجاري او في اي مكان خارج التطبيق نهائياً.</string>
    <string name="vision">الرؤية</string>
    <string name="message">الرسالة</string>
    <string name="select_date">تاريخ الميلاد</string>
    <string name="diseases">الامراض</string>
</resources>
