<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/dialog_activity_header"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/focus_layout"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="12dp">

                        <TextView
                            style="@style/dialog_field_title"
                            android:text="@string/gender" />

                        <TextView
                            android:layout_width="@dimen/colon_width"
                            android:layout_height="wrap_content"
                            android:text="@string/colon"
                            android:gravity="center"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:id="@+id/radio">

                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/male"
                                    android:text="@string/male"/>


                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/female"
                                    android:text="@string/female"/>

                            </RadioGroup>


                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="12dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="4dp">

                            <TextView
                                style="@style/dialog_field_title"
                                android:text="@string/details"/>

                            <TextView
                                android:layout_width="@dimen/colon_width"
                                android:layout_height="wrap_content"
                                android:text="@string/colon"
                                android:gravity="center"/>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="3"/>

                        </LinearLayout>

                        <!--<ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@color/grey_100"
                            android:padding="8dp"
                            android:clipToPadding="false"
                            android:scrollbars="none"

                            >



                        </ScrollView>-->

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:background="@color/grey_100"
                            android:padding="8dp"
                            android:clipToPadding="false"
                            android:scrollbars="none"
                            >

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@null"
                                android:textSize="@dimen/mid_text"
                                android:inputType="textMultiLine"
                                android:singleLine="false"
                                android:gravity="start"
                                android:id="@+id/consult_text"
                                android:hint="@string/write_consultation"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <TextView
                            style="@style/dialog_field_title"
                            android:text="@string/age"
                            />

                        <TextView
                            android:layout_width="@dimen/colon_width"
                            android:layout_height="wrap_content"
                            android:text="@string/colon"
                            android:gravity="center"/>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="60dp"
                                android:background="@color/grey_100"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp">

                                <EditText
                                    android:layout_width="match_parent"
                                    android:background="@null"
                                    android:layout_height="wrap_content"
                                    android:inputType="number"
                                    android:maxLines="1"
                                    android:gravity="center"
                                    android:id="@+id/age"/>

                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/years"
                                android:layout_marginStart="20dp"/>


                        </LinearLayout>



                    </LinearLayout>

                    <include layout="@layout/confirm_layout"/>


                </LinearLayout>

            </LinearLayout>

        </FrameLayout>



    </LinearLayout>

    <include layout="@layout/loading_layout"/>

    <include layout="@layout/no_data_layout"/>

    <include layout="@layout/no_internet_layout"/>

</FrameLayout>