<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    app:cardCornerRadius="1dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:animateLayoutChanges="true"
        android:layout_marginTop="4dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--// title section -->
        <TextView
            android:includeFontPadding="false"
            android:text="@string/schdual"
            android:textSize="@dimen/mid_text"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/sch_name"
            android:visibility="gone"
            android:layout_marginBottom="6dp"
            android:text="@string/ever_day"
            android:textSize="@dimen/small_text"
            android:textColor="@color/dark_text"
            android:fontFamily="@font/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--// starting day section -->
            <LinearLayout
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:id="@+id/starting_day_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/starting_day"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/dark_text"
                    android:fontFamily="@font/font_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/starting_day_section_txt"
                    android:layout_marginStart="8dp"
                    android:text="@string/ever_day"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/font_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <!--// separator-->
            <include
                layout="@layout/separator_line"/>

            <!--// ending day section -->

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/med_period"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/dark_text"
                    android:fontFamily="@font/font_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginStart="-2dp"
                    android:id="@+id/contonious_section"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/contonious_rd"
                        android:checked="true"
                        android:layout_margin="-6dp"
                        android:scaleY="0.7"
                        android:scaleX="0.7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="-4dp"
                        android:textSize="@dimen/small_text"
                        android:checked="true"
                        android:gravity="center"
                        android:fontFamily="@font/font_bold"
                        android:textColor="@color/dark_text"
                        android:text="@string/contonious"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="-2dp"
                    android:id="@+id/days_count_section"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/days_count_rd"
                        android:checked="false"
                        android:layout_margin="-6dp"
                        android:scaleY="0.7"
                        android:scaleX="0.7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:fontFamily="@font/font_bold"
                        android:layout_marginTop="-4dp"
                        android:textSize="@dimen/small_text"
                        android:checked="true"
                        android:gravity="center"
                        android:textColor="@color/dark_text"
                        android:text="@string/days_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </LinearLayout>

            <!--// separator-->
            <include
                layout="@layout/separator_line"/>

            <!--// ending day section -->

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/days"
                    android:textSize="@dimen/small_text"
                    android:textColor="@color/dark_text"
                    android:fontFamily="@font/font_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginStart="-2dp"
                    android:id="@+id/every_day_section"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/every_day_rd"
                        android:checked="true"
                        android:layout_margin="-6dp"
                        android:scaleY="0.7"
                        android:scaleX="0.7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:fontFamily="@font/font_bold"
                        android:layout_marginTop="-4dp"
                        android:textSize="@dimen/small_text"
                        android:checked="true"
                        android:gravity="center"
                        android:textColor="@color/dark_text"
                        android:text="@string/every_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="-2dp"
                    android:id="@+id/week_days_section"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/week_days_rd"
                        android:checked="false"
                        android:layout_margin="-6dp"
                        android:scaleY="0.7"
                        android:scaleX="0.7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView

                        android:fontFamily="@font/font_bold"
                        android:layout_marginTop="-4dp"
                        android:textSize="@dimen/small_text"
                        android:checked="false"
                        android:gravity="center"
                        android:textColor="@color/dark_text"
                        android:text="@string/specfic_week_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>



    </LinearLayout>


    <ImageView
        android:rotation="180"
        android:id="@+id/repeating_days_arrow"
        android:layout_margin="10dp"
        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:layout_gravity="end"
        android:tint="@color/dark_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.v7.widget.CardView>